-- JAPANO — ERD v2 (DDL SQLite) — schema chuẩn hoá.
PRAGMA foreign_keys = OFF;

CREATE TABLE `Categories` (
  `CategoryID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `CategoryName` VARCHAR(150) NOT NULL,
  `Kanji` VARCHAR(40),
  `Slug` VARCHAR(80) NOT NULL,
  `Description` VARCHAR(255),
  `ParentID` BIGINT,
  UNIQUE (`Slug`),
  FOREIGN KEY (`ParentID`) REFERENCES `Categories`(`CategoryID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `Products` (
  `ProductID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `CategoryID` BIGINT NOT NULL,
  `ProductName` VARCHAR(190) NOT NULL,
  `Kanji` VARCHAR(40),
  `Slug` VARCHAR(120) NOT NULL,
  `Brand` VARCHAR(80),
  `Price` BIGINT NOT NULL,
  `OldPrice` BIGINT,
  `Description` TEXT,
  `Story` TEXT,
  `Status` VARCHAR(20) NOT NULL,
  `CreatedAt` DATETIME NOT NULL,
  UNIQUE (`Slug`),
  CHECK (Price >= 0),
  FOREIGN KEY (`CategoryID`) REFERENCES `Categories`(`CategoryID`) ON UPDATE CASCADE ON DELETE RESTRICT
);

CREATE TABLE `Images` (
  `ImageID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `ProductID` BIGINT NOT NULL,
  `Url` VARCHAR(500) NOT NULL,
  `Position` INT NOT NULL,
  FOREIGN KEY (`ProductID`) REFERENCES `Products`(`ProductID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `Colors` (
  `ColorID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `ColorName` VARCHAR(60) NOT NULL,
  `ColorCode` VARCHAR(16)
);

CREATE TABLE `Sizes` (
  `SizeID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `SizeName` VARCHAR(20) NOT NULL,
  `SortOrder` INT NOT NULL,
  UNIQUE (`SizeName`)
);

CREATE TABLE `ProductVariants` (
  `VariantID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `ProductID` BIGINT NOT NULL,
  `ColorID` BIGINT NOT NULL,
  `SizeID` BIGINT NOT NULL,
  `SKU` VARCHAR(60) NOT NULL,
  `Price` BIGINT,
  `StockQuantity` INT NOT NULL,
  `Reserved` INT NOT NULL,
  `Status` VARCHAR(20) NOT NULL,
  UNIQUE (`SKU`),
  UNIQUE (`ProductID`, `ColorID`, `SizeID`),
  CHECK (StockQuantity >= 0),
  CHECK (Reserved >= 0),
  FOREIGN KEY (`ProductID`) REFERENCES `Products`(`ProductID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`ColorID`) REFERENCES `Colors`(`ColorID`) ON UPDATE CASCADE ON DELETE RESTRICT,
  FOREIGN KEY (`SizeID`) REFERENCES `Sizes`(`SizeID`) ON UPDATE CASCADE ON DELETE RESTRICT
);

CREATE TABLE `Users` (
  `UserID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `FullName` VARCHAR(150) NOT NULL,
  `Email` VARCHAR(190),
  `PasswordHash` VARCHAR(255),
  `Phone` VARCHAR(40),
  `Role` VARCHAR(20) NOT NULL,
  `Status` VARCHAR(20) NOT NULL,
  `StripeCustomerID` VARCHAR(60),
  `ResetCodeHash` VARCHAR(64),
  `ResetCodeExpiresAt` DATETIME,
  `CreatedAt` DATETIME NOT NULL,
  UNIQUE (`Email`)
);

CREATE TABLE `Addresses` (
  `AddressID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT NOT NULL,
  `RecipientName` VARCHAR(150) NOT NULL,
  `Phone` VARCHAR(40) NOT NULL,
  `Street` VARCHAR(255) NOT NULL,
  `Ward` VARCHAR(120),
  `Province` VARCHAR(120),
  `IsDefault` BOOLEAN NOT NULL,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `Profiles` (
  `ProfileID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT NOT NULL,
  `Gender` VARCHAR(30),
  `SkinTone` VARCHAR(60),
  `Styles` VARCHAR(255),
  `Occasion` VARCHAR(120),
  `Budget` BIGINT,
  `HeightCm` INT,
  `WeightKg` INT,
  `UsualSize` VARCHAR(20),
  `UpdatedAt` DATETIME,
  UNIQUE (`UserID`),
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `CartItems` (
  `CartID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT NOT NULL,
  `VariantID` BIGINT NOT NULL,
  `Quantity` INT NOT NULL,
  `AddedAt` DATETIME NOT NULL,
  UNIQUE (`UserID`, `VariantID`),
  CHECK (Quantity > 0),
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`VariantID`) REFERENCES `ProductVariants`(`VariantID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `Wishlist` (
  `WishlistID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT NOT NULL,
  `ProductID` BIGINT NOT NULL,
  `CreatedAt` DATETIME NOT NULL,
  UNIQUE (`UserID`, `ProductID`),
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`ProductID`) REFERENCES `Products`(`ProductID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `Orders` (
  `OrderID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT,
  `DiscountID` BIGINT,
  `PaymentID` BIGINT,
  `OrderCode` VARCHAR(40) NOT NULL,
  `OrderDate` DATETIME NOT NULL,
  `OrderStatus` VARCHAR(30) NOT NULL,
  `RecipientName` VARCHAR(150) NOT NULL,
  `PhoneNumber` VARCHAR(40) NOT NULL,
  `ShippingAddress` VARCHAR(255) NOT NULL,
  `Subtotal` BIGINT NOT NULL,
  `DiscountAmount` BIGINT NOT NULL,
  `ShippingFee` BIGINT NOT NULL,
  `TotalAmount` BIGINT NOT NULL,
  `Source` VARCHAR(30),
  `CancelReason` VARCHAR(255),
  UNIQUE (`OrderCode`),
  CHECK (TotalAmount >= 0),
  CHECK (DiscountAmount >= 0),
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE SET NULL,
  FOREIGN KEY (`DiscountID`) REFERENCES `DiscountCodes`(`DiscountID`) ON UPDATE CASCADE ON DELETE SET NULL,
  FOREIGN KEY (`PaymentID`) REFERENCES `Payments`(`PaymentID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `OrderItems` (
  `OrderItemID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `OrderID` BIGINT NOT NULL,
  `VariantID` BIGINT,
  `ProductName` VARCHAR(190) NOT NULL,
  `ColorName` VARCHAR(60),
  `SizeName` VARCHAR(20),
  `Quantity` INT NOT NULL,
  `UnitPrice` BIGINT NOT NULL,
  `LineTotal` BIGINT NOT NULL,
  CHECK (Quantity > 0),
  FOREIGN KEY (`OrderID`) REFERENCES `Orders`(`OrderID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`VariantID`) REFERENCES `ProductVariants`(`VariantID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `Payments` (
  `PaymentID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `PaymentMethod` VARCHAR(40) NOT NULL,
  `Provider` VARCHAR(20) NOT NULL,
  `PaymentStatus` VARCHAR(20) NOT NULL,
  `Amount` BIGINT NOT NULL,
  `Currency` VARCHAR(10) NOT NULL,
  `TransactionID` VARCHAR(120),
  `PaidAt` DATETIME,
  `CreatedAt` DATETIME NOT NULL
);

CREATE TABLE `DiscountCodes` (
  `DiscountID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `Code` VARCHAR(40) NOT NULL,
  `DiscountType` VARCHAR(20) NOT NULL,
  `DiscountValue` INT NOT NULL,
  `MinOrderAmount` BIGINT NOT NULL,
  `MaxDiscountAmount` BIGINT,
  `UsageLimit` INT,
  `UsedCount` INT NOT NULL,
  `PerUserLimit` INT,
  `StartDate` DATETIME,
  `ExpiryDate` DATETIME,
  `Status` VARCHAR(20) NOT NULL,
  `CreatedAt` DATETIME NOT NULL,
  UNIQUE (`Code`),
  CHECK (DiscountValue > 0),
  CHECK (UsedCount >= 0)
);

CREATE TABLE `VipMemberships` (
  `VipID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT NOT NULL,
  `QualifyingPeriod` CHAR(7) NOT NULL,
  `QualifiedSpend` BIGINT NOT NULL,
  `Threshold` BIGINT NOT NULL,
  `DiscountPercent` INT NOT NULL,
  `DiscountedUnits` INT NOT NULL,
  `Status` VARCHAR(20) NOT NULL,
  `StartedAt` DATETIME NOT NULL,
  `ExpiresAt` DATETIME NOT NULL,
  UNIQUE (`UserID`, `QualifyingPeriod`),
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `ReturnRequests` (
  `ReturnID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `OrderID` BIGINT NOT NULL,
  `UserID` BIGINT,
  `PaymentID` BIGINT,
  `ReturnCode` VARCHAR(60) NOT NULL,
  `Kind` VARCHAR(10) NOT NULL,
  `ReturnStatus` VARCHAR(30) NOT NULL,
  `Reason` VARCHAR(255),
  `Note` TEXT,
  `Amount` BIGINT NOT NULL,
  `CodManualRefund` BOOLEAN NOT NULL,
  `RefundedAt` DATETIME,
  `CreatedAt` DATETIME NOT NULL,
  `UpdatedAt` DATETIME,
  UNIQUE (`ReturnCode`),
  FOREIGN KEY (`OrderID`) REFERENCES `Orders`(`OrderID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE SET NULL,
  FOREIGN KEY (`PaymentID`) REFERENCES `Payments`(`PaymentID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `ReturnImages` (
  `ReturnImageID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `ReturnID` BIGINT NOT NULL,
  `Url` VARCHAR(500) NOT NULL,
  `Position` INT NOT NULL,
  FOREIGN KEY (`ReturnID`) REFERENCES `ReturnRequests`(`ReturnID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `Reviews` (
  `ReviewID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `ProductID` BIGINT NOT NULL,
  `UserID` BIGINT NOT NULL,
  `OrderID` BIGINT,
  `Rating` TINYINT NOT NULL,
  `Comment` TEXT,
  `MediaUrl` VARCHAR(500),
  `MediaKind` VARCHAR(10),
  `ReviewStatus` VARCHAR(20) NOT NULL,
  `ReviewDate` DATETIME NOT NULL,
  UNIQUE (`ProductID`, `UserID`, `OrderID`),
  CHECK (Rating BETWEEN 1 AND 5),
  FOREIGN KEY (`ProductID`) REFERENCES `Products`(`ProductID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`OrderID`) REFERENCES `Orders`(`OrderID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `ReviewReactions` (
  `ReactionID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `ReviewID` BIGINT NOT NULL,
  `UserID` BIGINT NOT NULL,
  `Value` VARCHAR(20) NOT NULL,
  `CreatedAt` DATETIME NOT NULL,
  UNIQUE (`ReviewID`, `UserID`),
  FOREIGN KEY (`ReviewID`) REFERENCES `Reviews`(`ReviewID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `Interactions` (
  `InteractionID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT,
  `ProductID` BIGINT,
  `Type` VARCHAR(30) NOT NULL,
  `Value` INT NOT NULL,
  `Source` VARCHAR(30),
  `CreatedAt` DATETIME NOT NULL,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE SET NULL,
  FOREIGN KEY (`ProductID`) REFERENCES `Products`(`ProductID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `AIChat` (
  `ChatID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT,
  `Content` TEXT,
  `IsClientSend` BOOLEAN NOT NULL,
  `CreatedAt` DATETIME NOT NULL,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `AIDescriptions` (
  `DescriptionID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `ProductID` BIGINT NOT NULL,
  `Headline` VARCHAR(255),
  `VisualSummary` TEXT,
  `StylingTip` TEXT,
  `PurchaseReason` TEXT,
  `Confidence` VARCHAR(10),
  `Engine` VARCHAR(60),
  `GeneratedAt` DATETIME NOT NULL,
  UNIQUE (`ProductID`),
  FOREIGN KEY (`ProductID`) REFERENCES `Products`(`ProductID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `TryOnHistory` (
  `TryOnID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT,
  `ProductID` BIGINT,
  `Engine` VARCHAR(190),
  `ResultUrl` VARCHAR(500),
  `CreatedAt` DATETIME NOT NULL,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE SET NULL,
  FOREIGN KEY (`ProductID`) REFERENCES `Products`(`ProductID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `Goals` (
  `GoalID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT NOT NULL,
  `ProductID` BIGINT,
  `MonthlyIncome` BIGINT,
  `FixedExpenses` BIGINT,
  `CurrentSavings` BIGINT,
  `TargetMonths` INT,
  `MonthlySaving` BIGINT,
  `CreatedAt` DATETIME NOT NULL,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`ProductID`) REFERENCES `Products`(`ProductID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `Flagcards` (
  `FlagcardID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `Slug` VARCHAR(80) NOT NULL,
  `Title` VARCHAR(190) NOT NULL,
  `Japanese` VARCHAR(190),
  `Region` VARCHAR(120),
  `Summary` TEXT,
  `SortOrder` INT,
  `Active` BOOLEAN NOT NULL,
  UNIQUE (`Slug`)
);

CREATE TABLE `FlagcardCollections` (
  `CollectionID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT NOT NULL,
  `CompletedAt` DATETIME,
  `RewardVoucherCode` VARCHAR(40),
  `CreatedAt` DATETIME NOT NULL,
  `UpdatedAt` DATETIME,
  UNIQUE (`UserID`),
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `FlagcardAwards` (
  `AwardID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `CollectionID` BIGINT NOT NULL,
  `FlagcardID` BIGINT,
  `OrderID` BIGINT,
  `AwardedAt` DATETIME NOT NULL,
  `Source` VARCHAR(40),
  FOREIGN KEY (`CollectionID`) REFERENCES `FlagcardCollections`(`CollectionID`) ON UPDATE CASCADE ON DELETE CASCADE,
  FOREIGN KEY (`FlagcardID`) REFERENCES `Flagcards`(`FlagcardID`) ON UPDATE CASCADE ON DELETE SET NULL,
  FOREIGN KEY (`OrderID`) REFERENCES `Orders`(`OrderID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `JapanSpotReviews` (
  `SpotReviewID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT,
  `Place` VARCHAR(190) NOT NULL,
  `Prefecture` VARCHAR(120) NOT NULL,
  `Rating` TINYINT NOT NULL,
  `Comment` TEXT,
  `MediaUrl` VARCHAR(500),
  `ReviewStatus` VARCHAR(20) NOT NULL,
  `CreatedAt` DATETIME NOT NULL,
  CHECK (Rating BETWEEN 1 AND 5),
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `JapanSpotSuggestions` (
  `SuggestionID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT,
  `Prefecture` VARCHAR(120) NOT NULL,
  `Suggestion` TEXT,
  `CreatedAt` DATETIME NOT NULL,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE `Notifications` (
  `NotificationID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `UserID` BIGINT,
  `Title` VARCHAR(255),
  `Content` TEXT,
  `Type` VARCHAR(60),
  `Action` VARCHAR(120),
  `IsRead` BOOLEAN NOT NULL,
  `CreatedAt` DATETIME NOT NULL,
  FOREIGN KEY (`UserID`) REFERENCES `Users`(`UserID`) ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE `Banners` (
  `BannerID` INTEGER PRIMARY KEY AUTOINCREMENT,
  `Title` VARCHAR(190),
  `Image` VARCHAR(500),
  `Link` VARCHAR(255),
  `Active` BOOLEAN NOT NULL,
  `SortOrder` INT
);

CREATE TABLE `ShopSettings` (
  `SettingID` TINYINT,
  `ShopName` VARCHAR(150),
  `Hotline` VARCHAR(40),
  `Email` VARCHAR(150),
  `Address` VARCHAR(255),
  `ShipFee` BIGINT,
  `Cod` BOOLEAN,
  `Stripe` BOOLEAN,
  `Vnpay` BOOLEAN,
  `LogoUrl` VARCHAR(500),
  PRIMARY KEY (`SettingID`)
);

PRAGMA foreign_keys = ON;