// JAPANO - So do quan he thuc the (ERD) cho dbdiagram.io
// Dan TOAN BO noi dung file nay vao o soan thao ben TRAI cua dbdiagram.io.
// Moi dong "Ref:" la mot day noi tu khoa ngoai (FK) den khoa chinh (PK).

Table shop_settings {
  id tinyint [pk]
  name varchar(150)
  hotline varchar(40)
  email varchar(150)
  address varchar(255)
  ship_fee int
  cod boolean
  stripe boolean
  vnpay boolean
  logo text
}

Table flagcard_config {
  id tinyint [pk]
  active boolean
  qualifying_order_min int
  required_cards int
  reward_percent int
  reward_voucher_min_order int
  reward_validity_days int
}

Table integration_settings {
  id tinyint [pk]
  mongo boolean
  cloudinary boolean
  ai boolean
}

Table categories {
  id varchar(80) [pk]
  name varchar(150) [not null]
  kanji varchar(40)
}

Table users {
  id varchar(80) [pk]
  name varchar(150) [not null]
  email varchar(190) [unique]
  role varchar(30) [not null]
  status varchar(30) [not null]
  orders_count int
  spent bigint
  tryons int
  vip varchar(40)
  joined_at bigint
}

Table vouchers {
  code varchar(40) [pk]
  type varchar(20) [not null]
  value int [not null]
  min_order int
  expiry date
  usage_limit int
  used int
  active boolean
}

Table banners {
  id varchar(40) [pk]
  title varchar(190)
  img varchar(255)
  link varchar(255)
  active boolean
  sort_order int
}

Table notifications {
  id varchar(60) [pk]
  title varchar(255)
  body text
  type varchar(60)
  action varchar(120)
  reach int
  at bigint
}

Table flagcards {
  id varchar(80) [pk]
  sort_order int
  glyph varchar(16)
  accent varchar(16)
  title varchar(190)
  japanese varchar(190)
  region varchar(120)
  summary text
  formation_history text
  legend text
  outfit_style varchar(190)
  outfit_reason text
  source_url varchar(255)
  active boolean
}

Table products {
  id varchar(80) [pk]
  slug varchar(120) [unique, not null]
  name varchar(190) [not null]
  kanji varchar(40)
  sku varchar(60)
  category_id varchar(80)
  brand varchar(80)
  price bigint [not null]
  old_price bigint
  sale int
  status varchar(30)
  color_hex varchar(16)
  rating decimal(3,1)
  sold int
  description text
  story text
  image varchar(255)
}

Table product_images {
  id int [pk]
  product_id varchar(80) [not null]
  url varchar(255) [not null]
  position int
}

Table product_variants {
  id int [pk]
  product_id varchar(80) [not null]
  color_name varchar(60)
  color_hex varchar(16)
  size varchar(20)
  sku varchar(60)
  stock int
}

Table product_tags {
  id int [pk]
  product_id varchar(80) [not null]
  tag varchar(80) [not null]
  kind varchar(20) [not null]
}

Table flagcard_facts {
  id int [pk]
  flagcard_id varchar(80) [not null]
  fact varchar(255) [not null]
}

Table flagcard_checkins {
  id int [pk]
  flagcard_id varchar(80) [not null]
  name varchar(120) [not null]
  tip varchar(255)
}

Table flagcard_recommended_products {
  id int [pk]
  flagcard_id varchar(80) [not null]
  product_slug varchar(120)
}

Table profiles {
  user_id varchar(80) [pk]
  gender varchar(30)
  skin_tone varchar(60)
  occasion varchar(120)
  budget bigint
  height_cm int
  weight_kg int
  usual_size varchar(20)
  updated_at bigint
}

Table profile_styles {
  id int [pk]
  user_id varchar(80) [not null]
  style varchar(80) [not null]
}

Table orders {
  id varchar(80) [pk]
  code varchar(40) [not null]
  user_id varchar(80)
  customer_name varchar(150)
  customer_email varchar(190)
  customer_phone varchar(40)
  address varchar(255)
  ward_code varchar(20)
  ward varchar(120)
  province_code varchar(20)
  province varchar(120)
  subtotal bigint
  discount bigint
  voucher_discount bigint
  payment_discount bigint
  discount_code varchar(40)
  total bigint
  ship bigint
  payment_method varchar(40)
  payment_provider varchar(40)
  payment_status varchar(40)
  payment_txn varchar(120)
  payment_currency varchar(10)
  status varchar(30) [not null]
  source varchar(30)
  created_at bigint
}

Table order_items {
  id int [pk]
  order_id varchar(80) [not null]
  product_slug varchar(120)
  name varchar(190)
  color_name varchar(60)
  color_hex varchar(16)
  size varchar(20)
  qty int [not null]
  price bigint [not null]
}

Table order_history {
  id int [pk]
  order_id varchar(80) [not null]
  status varchar(30) [not null]
  at bigint
}

Table payments {
  id varchar(80) [pk]
  code varchar(60)
  order_id varchar(80)
  user_id varchar(80)
  provider varchar(40)
  method varchar(40)
  status varchar(40)
  amount bigint
  original_amount bigint
  discount bigint
  voucher_discount bigint
  payment_discount bigint
  promotion_code varchar(40)
  currency varchar(10)
  transaction_code varchar(120)
  payment_intent_id varchar(120)
  checkout_session_id varchar(190)
  refundable boolean
  amount_subtotal bigint
  paid_at bigint
  charge_id varchar(120)
  receipt_url varchar(500)
  created_at bigint
  updated_at bigint
}

Table return_requests {
  id varchar(80) [pk]
  code varchar(60)
  order_id varchar(80)
  user_id varchar(80)
  payment_id varchar(80)
  status varchar(30)
  reason varchar(255)
  note text
  admin_note text
  amount bigint
  currency varchar(10)
  refund_id varchar(120)
  refund_status varchar(40)
  created_at bigint
  updated_at bigint
}

Table payment_refunds {
  id varchar(80) [pk]
  payment_id varchar(80) [not null]
  amount bigint
  currency varchar(10)
  status varchar(40)
  reason varchar(120)
  failure_reason varchar(255)
  return_request_id varchar(80)
  created_at bigint
  updated_at bigint
}

Table return_request_items {
  id int [pk]
  return_request_id varchar(80) [not null]
  product_slug varchar(120)
  name varchar(190)
  size varchar(20)
  color_name varchar(60)
  qty int
  price bigint
}

Table return_request_timeline {
  id int [pk]
  return_request_id varchar(80) [not null]
  status varchar(30) [not null]
  at bigint
  refund_id varchar(120)
  note varchar(255)
}

Table carts {
  id varchar(80) [pk]
  user_id varchar(80)
  updated_at bigint
}

Table cart_items {
  id int [pk]
  cart_id varchar(80) [not null]
  product_slug varchar(120)
  color varchar(60)
  size varchar(20)
  qty int
}

Table reviews {
  id varchar(80) [pk]
  product_slug varchar(120)
  user_id varchar(80)
  order_id varchar(80)
  order_code varchar(40)
  rating tinyint [not null]
  comment text
  media_url varchar(500)
  media_kind varchar(10)
  status varchar(20)
  created_at bigint
  updated_at bigint
}

Table review_reactions {
  id varchar(80) [pk]
  review_id varchar(80) [not null]
  user_id varchar(80)
  value varchar(20) [not null]
  updated_at bigint
}

Table moderation_samples {
  id varchar(80) [pk]
  review_id varchar(80)
  label varchar(30)
  normalized_text text
  source varchar(30)
  updated_at bigint
}

Table voucher_redemptions {
  id varchar(80) [pk]
  code varchar(40)
  user_id varchar(80)
  order_id varchar(80)
  discount bigint
  redeemed_at bigint
}

Table flagcard_collections {
  id varchar(80) [pk]
  user_id varchar(80)
  created_at bigint
  updated_at bigint
}

Table flagcard_collection_awards {
  id int [pk]
  collection_id varchar(80) [not null]
  flagcard_id varchar(80)
  order_id varchar(80)
  order_code varchar(40)
  order_total bigint
  awarded_at bigint
  source varchar(40)
}

Table interactions {
  id varchar(80) [pk]
  user_id varchar(80)
  product_slug varchar(120)
  type varchar(30)
  value int
  created_at bigint
  source varchar(30)
}

Table chats {
  id varchar(80) [pk]
  user_id varchar(80)
  role varchar(20)
  message text
  created_at bigint
}

Table chat_product_refs {
  id int [pk]
  chat_id varchar(80) [not null]
  product_slug varchar(120)
}

Table tryon_history {
  id varchar(80) [pk]
  user_id varchar(80)
  product_slug varchar(120)
  engine varchar(190)
  created_at bigint
}

Table tryon_accessories {
  id int [pk]
  tryon_id varchar(80) [not null]
  product_slug varchar(120)
}

Table goals {
  id varchar(120) [pk]
  user_id varchar(80)
  product_slug varchar(120)
  age int
  height_cm int
  current_weight_kg int
  target_weight_kg int
  monthly_income bigint
  fixed_expenses bigint
  current_savings bigint
  target_months int
  plan json
  created_at bigint
  updated_at bigint
}

Table ai_descriptions {
  id int [pk]
  product_slug varchar(120) [unique]
  generated_at bigint
  headline varchar(255)
  visual_summary text
  styling_tip text
  purchase_reason text
  confidence varchar(10)
  engine varchar(60)
}

Table ai_description_details {
  id int [pk]
  ai_description_id int [not null]
  detail varchar(500) [not null]
}

Table japan_spot_reviews {
  id varchar(80) [pk]
  place varchar(190) [not null]
  prefecture varchar(120) [not null]
  user_id varchar(80)
  user_name varchar(150)
  rating tinyint [not null]
  comment text
  media_url varchar(500)
  media_kind varchar(10)
  created_at bigint
}

Table japan_spot_suggestions {
  id varchar(80) [pk]
  prefecture varchar(120) [not null]
  user_id varchar(80)
  user_name varchar(150)
  suggestion text
  created_at bigint
}

// ---- Quan he (FK -> PK) ----
Ref: products.category_id > categories.id
Ref: product_images.product_id > products.id
Ref: product_variants.product_id > products.id
Ref: product_tags.product_id > products.id
Ref: flagcard_facts.flagcard_id > flagcards.id
Ref: flagcard_checkins.flagcard_id > flagcards.id
Ref: flagcard_recommended_products.flagcard_id > flagcards.id
Ref: flagcard_recommended_products.product_slug > products.slug
Ref: profiles.user_id > users.id
Ref: profile_styles.user_id > profiles.user_id
Ref: orders.user_id > users.id
Ref: orders.discount_code > vouchers.code
Ref: order_items.order_id > orders.id
Ref: order_items.product_slug > products.slug
Ref: order_history.order_id > orders.id
Ref: payments.order_id > orders.id
Ref: payments.user_id > users.id
Ref: return_requests.order_id > orders.id
Ref: return_requests.user_id > users.id
Ref: return_requests.payment_id > payments.id
Ref: payment_refunds.payment_id > payments.id
Ref: payment_refunds.return_request_id > return_requests.id
Ref: return_request_items.return_request_id > return_requests.id
Ref: return_request_items.product_slug > products.slug
Ref: return_request_timeline.return_request_id > return_requests.id
Ref: carts.user_id > users.id
Ref: cart_items.cart_id > carts.id
Ref: cart_items.product_slug > products.slug
Ref: reviews.product_slug > products.slug
Ref: reviews.user_id > users.id
Ref: reviews.order_id > orders.id
Ref: review_reactions.review_id > reviews.id
Ref: review_reactions.user_id > users.id
Ref: moderation_samples.review_id > reviews.id
Ref: voucher_redemptions.code > vouchers.code
Ref: voucher_redemptions.user_id > users.id
Ref: voucher_redemptions.order_id > orders.id
Ref: flagcard_collections.user_id > users.id
Ref: flagcard_collection_awards.collection_id > flagcard_collections.id
Ref: flagcard_collection_awards.flagcard_id > flagcards.id
Ref: flagcard_collection_awards.order_id > orders.id
Ref: interactions.user_id > users.id
Ref: interactions.product_slug > products.slug
Ref: chats.user_id > users.id
Ref: chat_product_refs.chat_id > chats.id
Ref: chat_product_refs.product_slug > products.slug
Ref: tryon_history.user_id > users.id
Ref: tryon_history.product_slug > products.slug
Ref: tryon_accessories.tryon_id > tryon_history.id
Ref: tryon_accessories.product_slug > products.slug
Ref: goals.user_id > users.id
Ref: goals.product_slug > products.slug
Ref: ai_descriptions.product_slug > products.slug
Ref: ai_description_details.ai_description_id > ai_descriptions.id
Ref: japan_spot_reviews.user_id > users.id
Ref: japan_spot_suggestions.user_id > users.id
